--- a/_includes/cv/time_table.html
+++ b/_includes/cv/time_table.html
@@ -24,11 +24,11 @@
                       <span class="item-title">{{ item.title }}</span>
                       <ul class="subitems">
                       {% for subitem in item.contents %}
-                        <li><span class="subitem">{{ subitem }}</span></li>
+                        <li><span class="subitem">{{ subitem | markdownify }}</span></li>
                       {% endfor %}
                       </ul>
                     {% else %}
-                      <span class="item">{{ item }}</span>
+                      <span class="item">{{ item | markdownify }}</span>
                     {% endif %}
                   </li>
                 {% endfor %}
@@ -42,11 +42,11 @@
                       <span class="item-title">{{ item.title }}</span>
                       <ul class="subitems">
                       {% for subitem in item.contents %}
-                        <li><span class="subitem">{{ subitem }}</span></li>
+                        <li><span class="subitem">{{ subitem | markdownify }}</span></li>
                       {% endfor %}
                       </ul>
                     {% else %}
-                      <span class="item">{{ item }}</span>
+                      <span class="item">{{ item | markdownify }}</span>
                     {% endif %}
                   </li>
                 {% endfor %}
