--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,13 +6,6 @@ layout: default
 {%- assign tags = page.tags | join: "" -%}
 {%- assign categories = page.categories | join: "" -%}
 
-{% if page._styles %}
-<!-- Page/Post style -->
-<style type="text/css">
-  {{ page._styles }}
-</style>
-{% endif %}
-
 <div class="post">
 
   <header class="post-header">
@@ -42,7 +35,7 @@ layout: default
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
     <div id="table-of-contents">
-      <!-- {% toc %} -->
+      <!-- Table of Contents will be generated here -->
     </div>
     <hr>
     {% endif %}
